    without doing revert or similar.
  * Add the start of a blackbox test suite.
  * Add the ability to export an upstream branch in normal mode.
  * Add a bd-do command for running commands when in merge mode. This
    is useful when you need the full upstream source, for instance patch
    handling.
  * Add hook support for running arbitrary commands at pre-defined points
    in the build.

 -- James Westby <jw+debian@jameswestby.net>  Sun, 16 Sep 2007 21:02:28 +0100

bzr-builddeb (0.90) unstable; urgency=low

  * Support exporting the working tree when it contains symlinks. Thanks
    to John Arbash Meinel for help on fixing it. (LP: #132391)
  * Fix the repacking of .tar.bz2 file to .tar.gz. Thanks Frederic Brin.
  * Complete the transition of deb822 into python-debian.

 -- James Westby <jw+debian@jameswestby.net>  Wed, 22 Aug 2007 22:25:27 +0100

bzr-builddeb (0.19) unstable; urgency=low

  * Allow empty author information in the changelog for those that like to
    develop without filling it in, and then add it while releasing.
  * Drop the dependency on python-deb822 as it is now part of python-debian.
    Thanks to Loïc Minier and Lucas Nussbaum for noticing.
    (Closes: #436386, #436089)

 -- James Westby <jw+debian@jameswestby.net>  Mon, 13 Aug 2007 22:03:03 +0100

bzr-builddeb (0.18) unstable; urgency=medium

  * Medium urgency as it will hold up the bzr 0.18 transition.
  * Remove any 'debian/' directory from the upstream tarball in merge mode,
    so that the branch contains all of the files that will appear there.
  * Allow the changelog entries to have no author information.
  * Add a working-tree option to the configuration files that if set always
    builds the working tree rather than the last revision in the branch.
  * uscan is now used to download an upstream tarball if the version required
    is not available and the user has a watch file. Thanks to Daniel Holbach
    for the insipration for how to implement this. This makes devscripts a